--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://GarvitMaheshwari2001.github.io/WeatherApp",
   "name": "weather",
   "version": "0.1.0",
   "private": true,
